--- a/sites/all/themes/mts/scss/modules/_filter.scss
+++ b/sites/all/themes/mts/scss/modules/_filter.scss
@@ -35,7 +35,7 @@
 
 .filter-list {
   border: $border;
-  padding: 10px 0 15px;
+  padding: 8px 0 12px;
 
   -ms-box-orient: horizontal;
   display: -webkit-box;
@@ -51,20 +51,22 @@
 
 .filter-list__category {
   &:after {
-    border-color: $monsoon transparent transparent transparent;
-    border-style: solid;
-    border-width: 8px 7px 0 7px;
-    content: '';
+    // border-color: $monsoon transparent transparent transparent;
+    // border-style: solid;
+    // border-width: 8px 7px 0 7px;
+    content: '+';
     display: inline-block;
-    height: 0;
-    margin-left: 5px;
-    transition: border .5s;
-    width: 0;
+    font-size: rem-calc(27);
+    line-height: 1;
+    // height: 0;
+    margin-left: 7px;
+    transition: transform .5s;
+    vertical-align: -14%;
+    // width: 0;
   }
 
   &.active:after {
-    border-width: 0 7px 8px 7px;
-    border-color: transparent transparent $monsoon transparent;
+    transform: translate3d(0, 0, 0) rotate(45deg);
   }
 }
 
