--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -111,8 +111,10 @@
 @import "modules/cart";
 @import "modules/currency";
 @import "modules/filter";
+@import "modules/follow";
 @import "modules/marquee";
 @import "modules/menu";
+@import "modules/newsletter";
 @import "modules/product";
 @import "modules/product_list";
 @import "modules/search";
