--- a/sites/all/themes/mts/scss/modules/_product_list.scss
+++ b/sites/all/themes/mts/scss/modules/_product_list.scss
@@ -24,17 +24,22 @@ $info-gutter: 3px;
 
   &__name {
     max-width: 85%;
-    line-height: 1.5;
+    line-height: 1.3rem;
+    padding: 3px 0 4px;
   }
 
   &__size,
   &__price,
   &__actions {
     float: right;
+    text-align: right;
   }
 
   &__actions {
+    bottom: 0;
     font-size: rem-calc(16);
+    position: absolute;
+    right: 5px;
 
     a + a {
       margin-left: 10px;
@@ -59,12 +64,15 @@ $info-gutter: 3px;
 
     &.on-hover {
       background: $white;
+      border-top: 1px solid transparent;
       bottom: 0;
       height: 0;
+      max-height: 0;
+      overflow: hidden;
       padding: 0 $info-gutter;
       position: absolute;
-      -webkit-transition: height 0.5s;
-      transition: height 0.5s;
+      -webkit-transition: max-height 0.5s;
+      transition: max-height 0.5s;
       width: 100%;
     }
   }
@@ -95,7 +103,9 @@ $info-gutter: 3px;
       }
 
       .on-hover {
-        min-height: 27px;
+        border-color: $monsoon;
+        height: auto;
+        max-height: 60px;
       }
     }
   }
