--- a/sites/all/themes/mts/scss/modules/_product.scss
+++ b/sites/all/themes/mts/scss/modules/_product.scss
@@ -8,6 +8,7 @@
 
 .product__ {
   &sidebar {
+    padding-right: 0;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -24,6 +25,7 @@
 
   &size {
     float: right;
+    font-size: rem-calc(15);
     line-height: 37px;
   }
 
@@ -64,7 +66,6 @@
   &tab-content {
     border-bottom: $border;
     flex-grow: 1;
-    margin-bottom: 5px;
     overflow: auto;
 
     > div {
@@ -81,7 +82,7 @@
   }
 
   &status {
-    font-size: rem-calc(20);
+    font-size: rem-calc(17);
     float: left;
   }
 
@@ -91,7 +92,7 @@
   }
 
   &add-to-cart {
-    margin-bottom: 6px;
+    margin: 10px 0 6px;
 
     .shopify-price {
       display: none;
@@ -111,7 +112,7 @@
   &share {
     @extend %share-bar;
     background: $monsoon;
-    padding: 10px 30px 12px;
+    padding: 5px 30px 5px;
   }
 
   &images {
@@ -141,6 +142,13 @@
       right: 0;
     }
 
+    .controls--open {
+      @extend %controls;
+      left: 30%;
+      right: 30%;
+      cursor: zoom-in;
+    }
+
     .flex-control-thumbs {
       margin-top: 10px;
 
@@ -153,6 +161,42 @@
         height: 85px;
         width: auto;
       }
+    }
+  }
+}
+
+.image-modal {
+  display: none;
+  background: rgba(255, 255, 255, .8);
+  position: fixed;
+  overflow: hidden;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 100;
+
+  &.opened {
+    display: block;
+  }
+
+  &__thumbnails {
+    float: left;
+    width: 150px;
+
+    a {
+      display: block;
+    }
+  }
+
+  &__images {
+    float: right;
+    height: 100%;
+    overflow: scroll;
+    width: calc(100% - 150px);
+
+    img {
+      width: 100%;
     }
   }
 }
