--- a/sites/all/themes/mts/scss/modules/_cart.scss
+++ b/sites/all/themes/mts/scss/modules/_cart.scss
@@ -1,6 +1,6 @@
 .cart-button {
   font-size: rem-calc(15);
-  margin-top: 2px;
+  margin: 2px 5px 0 0;
   text-transform: uppercase;
 
   .tooltip {
@@ -31,7 +31,7 @@
   left: 0;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: 100;
 
   &.opened {
     @extend %flex-container;
@@ -43,9 +43,12 @@
 }
 
 .cart-close {
+  font-size: rem-calc(60);
+  line-height: 1;
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 10px;
+  top: 0;
+  transform: rotateZ(45deg);
 }
 
 .cart {
@@ -57,22 +60,19 @@
 .cart__product {
   @extend %flex-container;
   align-items: center;
+  margin: 0 (-$column-gutter/4);
+  padding: ($column-gutter/4);
 
   & + .cart__product {
-    border-bottom: $border;
+    border-top: $border;
   }
-}
-
-.cart__product-image,
-.cart__product-price {
-  @include grid-column(3);
 }
 
 .cart__product-image img {
   height: 112px;
 }
 
-.cart__product-title {
+.cart__title-col {
   @include grid-column(10);
 }
 
