--- a/sites/all/themes/mts/scss/base/_mixins.scss
+++ b/sites/all/themes/mts/scss/base/_mixins.scss
@@ -44,8 +44,8 @@
 
 %space-between {
   @extend %flex-container;
-  -webkit-justify-content: space-around;
-  justify-content: space-around;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
 }
 
 %space-around {
