--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -115,6 +115,7 @@
 @import "modules/marquee";
 @import "modules/menu";
 @import "modules/newsletter";
+@import "modules/other_products";
 @import "modules/product";
 @import "modules/product_list";
 @import "modules/search";
