--- a/sites/all/themes/mts/scss/modules/_menu.scss
+++ b/sites/all/themes/mts/scss/modules/_menu.scss
@@ -14,7 +14,15 @@
     list-style: none;
 
     li {
-      float:none;
+      &:first-child a {
+        padding-left: 0;
+        padding-right: ($topbar-link-padding*2);
+      }
+
+      &:last-child a {
+        padding-left: ($topbar-link-padding*2);
+        padding-right: 0;
+      }
     }
   }
 
@@ -26,8 +34,8 @@
     background-image: url(../logo.png) !important;
     background-size: contain !important;
     font-size: 0;
-    height: 60px;
-    width: 132px;
+    height: 50px;
+    width: 111px;
     padding: 0 !important;
     margin-top: 7px;
   }
