--- a/sites/all/themes/mts/scss/modules/_product.scss
+++ b/sites/all/themes/mts/scss/modules/_product.scss
@@ -21,6 +21,7 @@
   &product_type {
     float: left;
     font-size: rem-calc(25);
+    font-weight: $font-weight-bold;
     line-height: 1;
     padding-bottom: 5px;
   }
@@ -60,8 +61,13 @@
       }
     }
 
-    i {
-
+    .dimensions {
+      background: url(../images/scale.svg) no-repeat top left;
+      background-size: contain;
+      display: inline-block;
+      margin-top: 5px;
+      height: 20px;
+      width: 20px;
     }
   }
 
@@ -89,8 +95,12 @@
   }
 
   &price {
-    font-size: rem-calc(20);
+    font-size: rem-calc(16);
     text-align: right;
+
+    .price__compare_at {
+      font-size: rem-calc(12);
+    }
   }
 
   &add-to-cart {
@@ -151,13 +161,13 @@
 
   .controls--prev {
     @extend %controls;
-    cursor: w-resize;
+    cursor: url(../images/left-arrow.png), w-resize;
     left: 0;
   }
 
   .controls--next {
     @extend %controls;
-    cursor: e-resize;
+    cursor: url(../images/right-arrow.png), e-resize;
     right: 0;
   }
 
