--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -93,6 +93,9 @@
 // Fix for some Drupal CSS quirks (Drupalisms).
 @import "base/drupal";
 
+// Add Custom Icons
+@import "base/icons";
+
 // Styling for elements.
 // Optional.
 // @import "base/elements";
