--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -121,6 +121,7 @@
 @import "modules/other_products";
 @import "modules/product";
 @import "modules/product_list";
+@import "modules/reveal";
 @import "modules/search";
 @import "modules/taxonomy";
 
