--- a/sites/all/themes/mts/scss/base/_init.scss
+++ b/sites/all/themes/mts/scss/base/_init.scss
@@ -1102,7 +1102,7 @@ $fieldset-border-color: $border-color;
 // $include-html-reveal-classes: $include-html-classes;
 
 // We use these to control the style of the reveal overlay.
-// $reveal-overlay-bg: rgba($black, .45);
+$reveal-overlay-bg: rgba($white, .8);
 // $reveal-overlay-bg-old: $black;
 
 // We use these to control the style of the modal itself.
@@ -1110,8 +1110,8 @@ $fieldset-border-color: $border-color;
 // $reveal-position-top: rem-calc(100);
 // $reveal-default-width: 80%;
 // $reveal-max-width: $row-width;
-// $reveal-modal-padding: rem-calc(20);
-// $reveal-box-shadow: 0 0 10px rgba($black,.4);
+$reveal-modal-padding: ($column-gutter/4);
+$reveal-box-shadow: none;
 
 // We use these to style the reveal close button
 // $reveal-close-font-size: rem-calc(40);
@@ -1121,13 +1121,13 @@ $fieldset-border-color: $border-color;
 // $reveal-close-weight: $font-weight-bold;
 
 // We use this to set the default radius used throughout the core.
-// $reveal-radius: $global-radius;
-// $reveal-round: $global-rounded;
+$reveal-radius: 0;
+$reveal-round: 0;
 
 // We use these to control the modal border
 // $reveal-border-style: solid;
 // $reveal-border-width: 1px;
-// $reveal-border-color: $steel;
+$reveal-border-color: $border-color;
 
 // $reveal-modal-class: "reveal-modal";
 // $close-reveal-modal-class: "close-reveal-modal";
