--- a/sites/all/themes/mts/scss/modules/_follow.scss
+++ b/sites/all/themes/mts/scss/modules/_follow.scss
@@ -1,8 +1,7 @@
 .follow-links {
   .icons {
-    display: flex;
+    @extend %space-between;
     font-size: rem-calc(18);
-    justify-content: space-between;
-    padding-top: 7px;
+    line-height: 1;
   }
 }
