--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -113,13 +113,13 @@
 // @import "modules/button";
 @import "modules/cart";
 @import "modules/currency";
-@import "modules/filter";
 @import "modules/follow";
 @import "modules/marquee";
 @import "modules/menu";
 @import "modules/newsletter";
 @import "modules/other_products";
 @import "modules/product";
+@import "modules/product_list/index";
 @import "modules/product_list";
 @import "modules/reveal";
 @import "modules/search";
