--- a/sites/all/themes/mts/scss/modules/product_list/_header.scss
+++ b/sites/all/themes/mts/scss/modules/product_list/_header.scss
@@ -1,15 +1,13 @@
 // Product List Header
 .product-list__header {
   border: $border;
-
-  > * {
-    padding: 8px 0 12px;
-  }
 }
 
 .product-list__categories {
   @extend %space-around;
   float: left;
+  // Corisponds to the value in .product-list__sort
+  padding: 8px 0 12px;
   width: calc(100% - 100px);
 }
 
@@ -17,8 +15,9 @@
   @include filter-status;
   border-left: $border;
   display: inline-block;
-  line-height: 1.5;
   margin-top: 2px;
+  // Corisponds to the value in .product-list__categories
+  padding: 6px 0 10px;
   text-align: center;
   width: 100px;
 }
