--- a/sites/all/themes/mts/scss/mts.scss
+++ b/sites/all/themes/mts/scss/mts.scss
@@ -98,7 +98,7 @@
 
 // Styling for elements.
 // Optional.
-// @import "base/elements";
+@import "base/elements";
 
 // Layout
 // Each section of the document has it's own partial seperated out to improve
