--- a/sites/all/themes/mts/scss/base/_elements.scss
+++ b/sites/all/themes/mts/scss/base/_elements.scss
@@ -9,6 +9,10 @@
 //------------------------------------------
 // h1, h2, h3,
 // h4, h5, h6 {}
+h1.title {
+  line-height: 1;
+}
+
 
 // Anchors
 //-----------------------------------------------------------------------------
