--- a/sites/all/themes/mts/scss/modules/_menu.scss
+++ b/sites/all/themes/mts/scss/modules/_menu.scss
@@ -15,12 +15,12 @@
     list-style: none;
 
     > li {
-      &:first-child a {
+      &:first-child > a {
         padding-left: 0;
         padding-right: ($topbar-link-padding*2);
       }
 
-      &:last-child a {
+      &:last-child > a {
         padding-left: ($topbar-link-padding*2);
         padding-right: 0;
       }
@@ -39,6 +39,11 @@
     width: 111px;
     padding: 0 !important;
     margin-top: 7px;
+  }
+
+  // Add nolink support.
+  label {
+    @extend a;
   }
 }
 
