--- a/sites/all/themes/mts/scss/modules/_cart.scss
+++ b/sites/all/themes/mts/scss/modules/_cart.scss
@@ -22,42 +22,50 @@
   width: 100%;
 }
 
-.cart-wrapper {
-  align-items: center;
-  background: #f9f9f9;
-  display: none;
-  font-size: rem-calc(18);
-  margin: 0 !important;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 100;
+.cart-modal {
+  background: rgba($silver, 0.8);
+  height: 100%;
+  margin: 0 0 0 50%;
+  padding: 30px 20px 20px;
+  width: 50%;
+}
 
-  &.opened {
-    @extend %flex-container;
-  }
+.cart__wrapper {
+  @include flex-container;
+  background: $white;
+  border: $border;
+  flex-direction: column;
+  height: calc(100% - 50px);
+}
 
-  .admin-menu & {
-    top: 30px;
-  }
+.cart {
+  @include flex-container;
+  flex-grow: 1;
+}
+
+.cart__inner {
+  @include flex-container;
+  flex-direction: column;
+  width: 100%;
+}
+
+.cart__products {
+  flex-grow: 1;
+  overflow: auto;
 }
 
 .cart__product {
-  @extend %flex-container;
+  @include flex-container;
   align-items: center;
   border-bottom: $border;
-  margin: 0 (-$column-gutter/4);
   padding: ($column-gutter/4);
-
-  &:first-child {
-    padding-top: 0;
-  }
 }
 
-.cart__product-image img {
-  height: 112px;
+.cart__col--left {
+  @include grid-column(
+    $columns: 3,
+    $collapse: true
+  );
 }
 
 .cart__col--mid {
@@ -66,25 +74,32 @@
 
 .cart__col--right {
   text-align: right;
-  padding-right: 1.25rem;
+  padding-right: $column-gutter;
   flex-grow: 1;
-}
-
-.cart__buttons {
-  margin-top: 15px;
-  text-align: right;
-}
-
-.cart__checkout {
-  margin-left: 10px;
 }
 
 .cart__quantity--add,
 .cart__quantity--subtract {
-  margin: 0 15px;
+  margin: 0 5px;
+}
+
+.cart__brand {
+  font-size: rem-calc(17);
+  font-weight: $font-weight-bold;
+}
+
+.cart__scale,
+.cart__quantity {
+  font-size: rem-calc(15);
+}
+
+.cart__price {
+  white-space: nowrap;
 }
 
 .cart__subtotal {
+  align-self: flex-end;
+  margin-right: $column-gutter;
   margin-top: 5px;
   text-align: right;
 }
@@ -93,7 +108,15 @@
   padding-right: 20px;
 }
 
+.cart__buttons {
+  align-self: flex-end;
+  margin-right: $column-gutter;
+  margin-top: 15px;
+  text-align: right;
+}
+
 .cart__checkout {
   background: $dark-grey;
   color: $white;
+  margin-left: 10px;
 }
