--- a/sites/all/themes/mts/scss/layout/_footer.scss
+++ b/sites/all/themes/mts/scss/layout/_footer.scss
@@ -6,6 +6,10 @@
   margin-top: 20px;
   padding: 15px;
 
+  section {
+    margin-bottom: 15px;
+  }
+
   .columns {
     padding-left: 1.3rem;
     padding-right: 1.3rem;
@@ -23,7 +27,6 @@
 
   .block-title {
     @extend h6;
-    margin-bottom: 15px;
   }
 }
 
@@ -32,3 +35,12 @@
   font-size: rem-calc(11);
   padding: 5px 10px;
 }
+
+@media #{$large-up} {
+  .l-footer {
+    .block-title {
+      margin-bottom: 15px;
+    }
+  }
+}
+
