--- a/sites/all/themes/mts/scss/modules/_menu.scss
+++ b/sites/all/themes/mts/scss/modules/_menu.scss
@@ -16,6 +16,7 @@
   .top-bar-section {
     border-bottom: $border;
     float: none;
+    padding: 0 (($column-gutter/2) + $page-gutter - $topbar-link-padding);
 
     // Direct decendent to prevent dropdown issues.
     > .main-nav {
@@ -54,7 +55,7 @@
   background: $white;
   border-bottom: $border;
   margin-bottom: 5px;
-  padding: 5px 0;
+  padding: 5px $page-gutter;
 
   section {
     line-height: rem-calc(26);
